# cpprestsdk

./: cpprestsdk140.sln
Release/: CMakeLists.txt
Release/cmake/: cpprest_find_boost.cmake  cpprest_find_openssl.cmake  cpprest_find_zlib.cmake
Release/include/pplx/: pplxtasks.h
Release/src/: CMakeLists.txt
Release/src/http/client/: http_client_asio.cpp  http_client_winrt.cpp
Release/src/pplx/: threadpool.cpp
Release/src/websockets/client/: ws_client_winrt.cpp  ws_client_wspp.cpp
Release/tests/functional/http/client/: CMakeLists.txt  authentication_tests.cpp  building_request_tests.cpp  connections_and_errors.cpp  outside_tests.cpp  progress_handler_tests.cpp
Release/tests/functional/http/listener/: requests_tests.cpp
Release/tests/functional/http/utilities/: test_http_client.cpp  test_http_server.cpp
Release/tests/functional/http/utilities/include/: test_http_server.h
Release/tests/functional/streams/: CMakeLists.txt
Release/tests/functional/websockets/: CMakeLists.txt
